code/tui/src/app/snapshots/app__state__tests__dictation_download_inline_zh.snap
---
source: code/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                  正 在 听 写 。 按  /dictate 停 止 。   
────────────────────────────────────────────────────────────────────────────────
> keep draft                                                                    
────────────────────────────────────────────────────────────────────────────────
                                                                                
  语 音  · 正 在 下 载  model_quant.onnx： 2.0 MiB · ctrl+c 停 止
