code/tui/src/app/snapshots/app__state__tests__dictation_preparation_with_running_turn.snap
---
source: code/tui/src/app/state_tests.rs
expression: rendered
---
  .                                                                [Dashboard]  
                                                                                
⠋ Working · 0m 00s total                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Dictation · loading model · ctrl+c to stop dictation                          
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
  ⏸ Manual                                                                      
                           Enter queue  ·  shift+tab mode  ·  shift+↓/↑ effort
