code/tui/src/app/snapshots/app__state__tests__dictation_ready_to_review.snap
---
source: code/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
  .                                                        [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                            Dictation stopped.  
  ────────────────────────────────────────────────────────────────────────────  
  > Please fix the parser and run tests                                         
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
