code/tui/src/app/snapshots/app__state__tests__removed_dictate_before_session_fullscreen.snap
---
source: code/tui/src/app/state_tests.rs
expression: frame
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                    Unknown command: /dictate.  
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
  ⏸ Manual                                                                      
                            Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
