code/tui/src/app/snapshots/app__state__tests__voice_hearing.snap
---
source: code/tui/src/app/state_tests.rs
assertion_line: 866
expression: render_dictation_frame(&app)
---
  .                                                        [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ > draft for later                                                        │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Voice · heard: thinking
