code/tui/src/app/snapshots/app__state__tests__xai_subscription_auto_models.snap
---
source: code/tui/src/app/state_tests.rs
expression: updated
---
  .                                                                        [— / —] [Dashboard]

            ┌── Config › Super Grok ───────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> Account  ·  ada@example.test                                        │
            │  Plan  ·  SuperGrok Heavy                                            │
            │                                                                      │
            │  Models ──────────────────────────────────────────────────────────── │
            │  Grok Next                                                           │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ╭─────────│  Esc to return  ·  l to sign out                                     │─────────╮
  │ > Build └──────────────────────────────────────────────────────────────────────┘         │
  ╰──────────────────────────────────────────────────────────────────────── Automatic model ─╯
