code/tui/src/app/snapshots/app__state__tests__xai_subscription_browser_failure.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                        [— / —] [Dashboard]








          ┌── Super Grok › Could not open browser ───────────────────────────────[✗]─┐
          │                                                                          │
          │  browser command unavailable                                             │
          │                                                                          │
          │  Enter/Esc to close                                                      │
          └──────────────────────────────────────────────────────────────────────────┘




  ╭──────────────────────────────────────────────────────────────────────────────────────────╮
  │ > Build anything                                                                         │
  ╰──────────────────────────────────────────────────────────────────────── Automatic model ─╯
